Fix gallery image aspect ratio cropping in flexbox

--- a/public/style.css
+++ b/public/style.css
@@ -756,6 +756,7 @@ input[type="date"]:focus {
 .gallery-slide img {
   width: 100%;
   flex-grow: 1;
+  min-height: 0;
   object-fit: contain;
   background-color: transparent;
 }
